Курсовая работа 2: исправил appearsIn (last version)